# f451-comms

./: .codecov.yml  .cookiecutter.json  .coverage.yml  .coveragerc  .flake8  .gitignore  .gitpod.yml  CODE_OF_CONDUCT.rst  CONTRIBUTING.rst  LICENSE.rst  README.rst  noxfile.py  pyproject.toml
.github/workflows/: constraints.txt  tests.yml
docs/: attribs.rst  conf.py  config_files.rst  conventions.rst  demo.rst  index.rst  installation.rst  logging.rst  quickstart.rst  reference.rst  requirements.rst  requirements.txt  send_mailgun.rst  send_message.rst  send_slack.rst  send_twilio.rst  send_twitter.rst  tldr.rst
src/: __init__.py
src/f451_comms/: __init__.py  __main__.py  comms.py  config.ini.example  constants.py  entity.py  exceptions.py  processor.py  secrets.ini.example  utils.py
src/f451_comms/providers/: email.py  mailgun.py  provider.py  slack.py  sms.py  twilio.py  twitter.py
tests/: __init__.py  conftest.py  test_comms.py  test_entity.py  test_main.py  test_utils.py
tests/providers/: test_email.py  test_mailgun.py  test_provider.py  test_slack.py  test_sms.py  test_twilio.py  test_twitter.py
tests/test_email/: email.html
tests/test_media/: test-image-small.tiff
