[tool.poetry]
name = "f451-comms"
version = "0.1.1"
description = "f451 Communications Module"
authors = ["Martin Lanser <martinlanser@gmail.com>"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/mlanser/f451-comms"
repository = "https://github.com/mlanser/f451-comms"
documentation = "https://f451-comms.readthedocs.io"
classifiers = [
    "Development Status :: 1 - Planning",
]

[tool.poetry.urls]
Changelog = "https://github.com/mlanser/f451-comms/releases"

[tool.poetry.dependencies]
python = "^3.8"
Faker = ">=13.7,<18.0"
argparse = "^1.4.0"
rich = "^12.2.0"
slack-bolt = "^1.11.1"
tweepy = "^4.9.0"
nox = "^2022.1.7"
twilio = "^7.9.0"
konsole = "^0.6.0"
sendgrid = "^6.9.7"
types-requests = "^2.27.16"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
pytest-mock = "^3.7.0"
coverage = {extras = ["toml"], version = "^6.1"}
safety = "^1.10.3"
mypy = "^0.950"
typeguard = "^2.13.0"
xdoctest = {extras = ["colors"], version = "^1.0.0"}
sphinx = "^4.5.0"
sphinx-autobuild = "^2021.3.14"
pre-commit = "^2.19.0"
flake8 = "^4.0.1"
black = "^22.1.0"
flake8-bandit = "^3.0.0"
flake8-bugbear = "^22.1.11"
flake8-docstrings = "^1.6.0"
flake8-rst-docstrings = "^0.2.3"
pep8-naming = "^0.12.1"
darglint = "^1.8.1"
reorder-python-imports = "^3.0.1"
pre-commit-hooks = "^4.0.1"
sphinx-rtd-theme = "^1.0.0"
sphinx-click = "^4.0.0"
sphinx-argparse-cli = "^1.8.3"
Pygments = "^2.10.0"
pyupgrade = "^2.32.1"
pyfakefs = "^4.5.6"
furo = ">=2021.11.12"

[tool.poetry.scripts]
f451-comms = "f451_comms.__main__:main"

[tool.pytest.ini_options]
testpaths = [
    "tests"
]
markers = [
    "smoke",    # quick smoke test with 3rd-party component mocked
    "slow",     # mark test as slow (deselect with '-m "not slow"')
]

[tool.coverage.paths]
source = ["src", "*/site-packages"]
tests = ["tests", "*/tests"]

[tool.coverage.run]
branch = true
source = ["f451_comms", "tests"]

[tool.coverage.report]
fail_under = 100
show_missing = true
# skip_empty = true

[tool.mypy]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
exclude = [
    '_temp_.*\.py',     # Don't run mypy on temp files
    'temp.*\.py',
    'conftest\.py',     # Don't run mypy on test files
    'test_.*\.py',
]
[[tool.mypy.overrides]]
module = [
    "slack_sdk",
    "tweepy",
    "twilio",
    "twilio.rest",
    "twilio.base.exception",
]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
